[gd_scene format=3 uid="uid://eyy5iq1g1yfp"]

[ext_resource type="Script" uid="uid://da34nq6metmsq" path="res://Scripts/fadeToBlack.gd" id="1_nf4gj"]
[ext_resource type="Texture2D" uid="uid://c5mkipv5jxts4" path="res://Assets/undo.png" id="2_2246s"]
[ext_resource type="Script" uid="uid://dswidqawgtpnl" path="res://Scripts/game_over_restart.gd" id="2_q7pk6"]
[ext_resource type="Script" uid="uid://dp56dub7qo4if" path="res://Scripts/resetLevel.gd" id="3_q7pk6"]

[node name="UI" type="CanvasLayer" unique_id=1806736499]
follow_viewport_enabled = true

[node name="Control" type="Control" parent="." unique_id=148914519]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0

[node name="CanvasModulate" type="CanvasModulate" parent="Control" unique_id=909553094]
script = ExtResource("1_nf4gj")

[node name="RestartButton" type="TextureButton" parent="Control" unique_id=1724219079]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0730001
anchor_bottom = 1.0
offset_left = 1794.0
offset_top = 25.0
offset_right = -80.09607
offset_bottom = -885.0
scale = Vector2(0.5292553, 0.5292553)
texture_normal = ExtResource("2_2246s")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("3_q7pk6")

[node name="Game_over_restart" type="Control" parent="Control" unique_id=208687727]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -110.0
offset_top = -48.999985
offset_right = -110.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.7600012, 1.7600012)
size_flags_horizontal = 0

[node name="Label" type="Label" parent="Control/Game_over_restart" unique_id=1983610114]
layout_mode = 0
offset_left = 327.0
offset_top = 181.0
offset_right = 901.0
offset_bottom = 318.0
theme_override_colors/font_color = Color(0.96862745, 0.19215687, 0.078431375, 1)
theme_override_colors/font_shadow_color = Color(0, 0.87058824, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "GAME OVER"

[node name="Restart Label" type="Label" parent="Control/Game_over_restart" unique_id=1322308536]
layout_mode = 0
offset_left = 538.0
offset_top = 439.0
offset_right = 1112.0
offset_bottom = 576.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0.87058824, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Try again"

[node name="TextureButton" type="TextureButton" parent="Control/Game_over_restart" unique_id=1990355793]
layout_mode = 0
offset_left = 570.0
offset_top = 335.00003
offset_right = 5212.092
offset_bottom = 5250.912
scale = Vector2(0.017845504, 0.017845504)
texture_normal = ExtResource("2_2246s")
ignore_texture_size = true
script = ExtResource("2_q7pk6")

[connection signal="fade_done" from="Control/CanvasModulate" to="Control/RestartButton" method="_on_fade_done"]
[connection signal="fade_out" from="Control/RestartButton" to="Control/CanvasModulate" method="_on_fade_out"]
